# toxbot

./: CMakeLists.txt  README.md  toxbot.c
cmake/: Findlibtoxcore.cmake
